Fixed invisible characters error, replaced by whitespace; fixed overlap on top when end of game is reached

--- a/style.scss
+++ b/style.scss
@@ -88,7 +88,7 @@ button{
 
 .board{
     text-align: center;
-    margin: 10% auto 5% auto;
+    margin: 20% auto 5% auto;
     width: 300px;
     height: 300px;
     font-weight: normal;
@@ -107,6 +107,7 @@ ul{
     border-radius: 7px;
     display: inline-block;
     position: relative;
+    vertical-align: top;
     width: 30%;
     height: 30%;
     margin: 1px -1px;
